fixed review spacing and added number of reviews

--- a/react-app/src/components/ProductDetails/ProductDetails.css
+++ b/react-app/src/components/ProductDetails/ProductDetails.css
@@ -96,3 +96,7 @@
     display: flex;
     align-items: center;
 }
+
+.reviewstarscumulative {
+    padding: 10px;
+}
